[gd_scene load_steps=3 format=3 uid="uid://b5xqvtxmbwury"]

[ext_resource type="Script" path="res://scripts/dialouge_box.gd" id="1_d0eqt"]
[ext_resource type="Theme" uid="uid://df4gmwpa6hgk" path="res://custom-dialogue-balloon/balloon_theme.tres" id="2_suytm"]

[node name="inventoryMenu" type="CanvasLayer"]
script = ExtResource("1_d0eqt")

[node name="choiceMessage" type="RichTextLabel" parent="."]
anchors_preset = -1
offset_left = 457.0
offset_top = 114.0
offset_right = 767.0
offset_bottom = 395.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_suytm")
theme_type_variation = &"DialogueText"
theme_override_font_sizes/normal_font_size = 300
text = "helloosdfsdf
"
scroll_following = true

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -210.0
offset_right = 204.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_suytm")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="choice1" type="Button" parent="."]
offset_left = 730.0
offset_top = 380.0
offset_right = 1036.0
offset_bottom = 425.0
theme_override_font_sizes/font_size = 25
text = "this is choice one"

[node name="choice2" type="Button" parent="."]
offset_left = 730.0
offset_top = 436.0
offset_right = 1036.0
offset_bottom = 481.0
theme_override_font_sizes/font_size = 25
text = "this is choice 2"

[connection signal="pressed" from="choice1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="choice2" to="." method="_on_choice_2_pressed"]
